Reformatted Code Style according to intellij-java-google-style.xml